--- a/docs/1. Create BackEnd API project.md
+++ b/docs/1. Create BackEnd API project.md
@@ -1,16 +1,17 @@
 
-## Creating a new project using Visual Studio
-1. Create and add a new project named `BackEnd` and name the solution `ConferencePlanner` using File / New / ASP.NET Core Web Application. Select the Web API template, No Auth, no Docker support.
+## Crie um novo projeto usando o Visual Studio
+
+1. Crie e adicione um novo projeto chamado `BackEnd` e dê o nome para a solução de `ConferencePlanner` usando Arquivo / Novo / ASP.NET Core Aplicação Web. Selecione o template Web API, sem Auth, sem suporte a  Docker.
    ![](images/vs2019-new-project.png "Creating a new solution in Visual Studio")
    ![](images/vs2019-name-backend-project.png "Adding a project to the solution")
    ![](images/vs2019-new-web-api.png "Web API Project settings")
 
-   > ***Note:* If not using Visual Studio, create the project using `dotnet new webapi` at the cmd line, details as follows:**
-   > 1. Create folder ConferencePlanner and call `dotnet new sln` at the cmd line to create a solution
-   > 2. Create sub-folder BackEnd and create a project using `dotnet new webapi` at the cmd line inside the folder BackEnd
-   > 3. Add the project to the solution using `dotnet sln add BackEnd/BackEnd.csproj`
-1. Add a new `Models` folder to the root of the application.
-1. Add a new `Speaker` class using the following code:
+   > ***Observação:* Se não estiver usando o Visual Studio, crie o novo projeto usando `dotnet new webapi` pela lina de comando, mais detalhes abaixo:**
+   > 1. Crie uma pasta chamada ConferencePlanner e execute `dotnet new sln` na linha de comando para criar a solução
+   > 2. Crie uma sub pasta chamada BackEnd e crie o projeto usando `dotnet new webapi` na linha de comando dentro da pasta BackEnd
+   > 3. Adicione o projeto à solução usando `dotnet sln add BackEnd/BackEnd.csproj`
+1. Adicione uma nova pasta `Models` na pasta raiz da aplicação.
+1. Adicione uma nova classe `Speaker` usando o seguinte trecho de código:
     ```csharp
     using System;
     using System.Collections.Generic;
@@ -36,11 +37,11 @@
         }
     }
     ```
-1. Add a reference to the NuGet package `Microsoft.EntityFrameworkCore.SqlServer` version `3.0.0`.
-    > This can be done from the command line using `dotnet add package Microsoft.EntityFrameworkCore.SqlServer --version 3.0.0`
-1. Add a reference to the NuGet package `Microsoft.EntityFrameworkCore.Sqlite` version `3.0.0`.
-    > This can be done from the command line using `dotnet add package Microsoft.EntityFrameworkCore.Sqlite --version 3.0.0`
-1. Next we'll create a new Entity Framework DbContext. Create a new `ApplicationDbContext` class in the `Models` folder using the following code:
+1. Adicione uma referência para o pacote Nuget `Microsoft.EntityFrameworkCore.SqlServer` version `3.0.0`.
+    > Isso pode ser feito usando a linha de comando `dotnet add package Microsoft.EntityFrameworkCore.SqlServer --version 3.0.0`
+1. Adicione uma referência para o pacote Nuget `Microsoft.EntityFrameworkCore.Sqlite` version `3.0.0`.
+    > Isso pode ser feito usando a linha de comando `dotnet add package Microsoft.EntityFrameworkCore.Sqlite --version 3.0.0`
+1. A seguir nós iremos criar um novo DbContext para o Entity Framework. Crie uma nova classe `ApplicationDbContext` na pasta `Models` usando o seguinte código:
     ```csharp
     using Microsoft.EntityFrameworkCore;
 
@@ -59,7 +60,7 @@
     }
 
     ```
-1. Add a connection string to the appsettings.json file for this database:
+1. Adicione uma string de conexão no arquivo appsettings.json para esse banco de dados:
 
     ```json
    {
@@ -77,8 +78,8 @@
    }
     ```
 
-## Register the DB Context Service
-1. Add the following code to the top of the `ConfigureServices()` method in `Startup.cs`:
+## Registrando o serviço DB Context
+1. Adicione o seguinte código no topo do método `ConfigureServices()` em `Startup.cs`:
     ```csharp
     services.AddDbContext<ApplicationDbContext>(options =>
     {
@@ -92,89 +93,94 @@
         }
     });
     ```
-    > This code registers the `ApplicationDbContext` service so it can be injected into controllers. Additionally, it configures operating system specific database technologies and connection strings
+    > Esse código registra o serviço `ApplicationDbContext` para que ele possa ser injetado nos controllers. Além disso, ele configura tecnologias específicas de banco de dados de acordo com o sistema operacional e strings de conexão.
 
-## Configuring EF Migrations
+## Configurando EF Migrations
+
+1. Adicione uma referência para o pacote Nuget `Microsoft.EntityFrameworkCore.Tools` version `3.0.0`.
+    > **Se você não estiver usando o Visual Studio** instale via linha de comando com `dotnet add package Microsoft.EntityFrameworkCore.Tools --version 3.0.0`
 
 1. Add a reference to the NuGet package `Microsoft.EntityFrameworkCore.Tools` version `3.0.0`.
     > **If you're not using Visual Studio** install the package from the command line with `dotnet add package Microsoft.EntityFrameworkCore.Tools --version 3.0.0`
 
 ### Visual Studio: Package Manager Console 
 
-1. In Visual Studio, select the Tools -> NuGet Package Manager -> Package Manager Console
+1. No Visual Studio, Selecione Ferramentas -> NuGet Package Manager -> Package Manager Console
 
-1. Run the following commands in the Package Manager Console
+1. Execute os seguintes comandos no console do gerenciador de pacotes
    ```console
    Add-Migration Initial
    Update-Database
    ```
 
-### Command line
+### Linha de Comando
 
-1. Install the EntityFramework global tool `dotnet-ef` using the following command:
+1. Instale o global tool do EntityFramework `dotnet-ef` usando o segunte comando:
    ```console
    dotnet tool install -g dotnet-ef --version 3.0.0
    ```
 
-1. Open a command prompt and navigate to the project directory. (The directory containing the `Startup.cs` file).
+1. Abra o prompt de comando e navegue até o diretório do projeto. (O diretório contendo o arquivo `Startup.cs`).
 
-1. Run the following commands in the command prompt:
+1. Execute os seguintes comandos no prompt de comando:
     ```console
     dotnet build
     dotnet ef migrations add Initial
     dotnet ef database update
     ```
-Commands Explained
+Comandos explicados
 
-| Command       |Description       |
+| Comando       |Descrição       |
 | ------------- |-------------|
-| `dotnet ef migrations add Initial` / `Add-Migration Initial`    | generates code to create the initial database schema based on the model specified in 'ApplicationDbContext.cs'. `Initial` is the name of the migration. |  
-|`dotnet ef database update` / `Update-Database` | creates the database      |
+| `dotnet ef migrations add Initial` / `Add-Migration Initial`    | gera código para criar o schema de banco de dados inicial baseado no modelo especificado no 'ApplicationDbContext.cs'. `Initial` é o nome da migração.  |  
+|`dotnet ef database update` / `Update-Database` | cria o banco de dados      |
 
-  >For more information on these commands and scaffolding in general, see [this tutorial](https://docs.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/adding-model#add-initial-migration-and-update-the-database).
+  >Para mais informações sobre esses comandos e scaffolding em geral, acesse [este tutorial](https://docs.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/adding-model#add-initial-migration-and-update-the-database).
 
-  >If your database ever gets in a bad state and you'd like to reset things, you can use `dotnet ef database drop` followed by `dotnet ef database update` to remove your database and run all migrations again.
+  >Se por acaso o seu banco de dados retornar um estado inconsistente e você quiser resetar as coisas, você pode usar `dotnet ef database drop` seguido de `dotnet ef database update` para remover o seu banco de dados e executar todas as migrações novamente.
 
-## A quick look at the Values Controller
-First, open the `Controllers` folder and take a quick look at the `ValuesController`. You'll see simple functions that correspond to HTTP verbs. You'll see the output of this controller in a bit, but first we'll build our own API controller for the `Speakers` model class.
+## Uma olhada rápida no Values Controller
+Primeiro, abra a pasta `Controllers` e veja rapidamente o `ValuesController`. Você verá funções simples que correspondem aos verbos HTTP. Você verá os retornos deste controller daqui a pouco, mas primeiro criaremos nosso próprio API controller para a classe de modelo `Speakers`.
 
-## Scaffolding an API Controller
-### Using Visual Studio
-1. Right-click the `Controllers` folder and select Add/Controller. Select "API Controller with actions, using Entity Framework".
-1. In the dialog, select the `Speaker` model for the Model Class, `ApplicationDbContext` for the "Data Context Class" and click the `Add` button.
+## Fazendo o scaffolding de uma API Controller
+### Usando o Visual Studio
+1. Clique com o botão direito do mouse na pasta `Controllers` e escolha Add/Controller. Selecione "API Controller with actions, using Entity Framework".
+
+1. No caixa de seleção, escolha o modelo `Speaker` para o Model Class, `ApplicationDbContext` para o "Data Context Class" e clique no botão `Add`.
    ![](images/scaffold-api-controller.png)
 
-### Using the cmd line
-1. Install the "Microsoft.VisualStudio.Web.CodeGeneration.Design" package
+### Usando a linha de comando
+1. Instale o pacote "Microsoft.VisualStudio.Web.CodeGeneration.Design"
     ```console
     dotnet add package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 3.0.0
     ```
 
-1. Install the `aspnet-codegenerator` global tool by running the following command:
+1. Instale a ferramenta global `aspnet-codegenerator` executando o seguinte comando:
     ```console
     dotnet tool install -g dotnet-aspnet-codegenerator --version 3.0.0
     ```
 
-> Note: You will need to close and reopen the console window to be able to use this tool.
-2. Run the following in the project folder at the cmd line:
+> Nota: você precisará fechar e reabrir a janela do console para poder usar esta ferramenta.
+2. Na pasta do projeto, na linha de comando, execute o seguinte comando:
+
     ```console
     dotnet aspnet-codegenerator controller -api -name SpeakersController -m Speaker -dc BackEnd.Models.ApplicationDbContext -outDir Controllers
     ```
 
-## Testing the API using the Swashbuckle
+## Testando a API usando o Swashbuckle
 
-In this section, we'll be adding documentation to our API using the Swashbuckle NuGet package.
+Nesta seção, adicionaremos documentação à nossa API usando o pacote Swashbuckle NuGet.
 
-[Swashbuckle.AspNetCore](https://github.com/domaindrivendev/swashbuckle.aspnetcore) is an open source project for generating Swagger documents for Web APIs that are built with ASP.NET Core.
+[Swashbuckle.AspNetCore](https://github.com/domaindrivendev/swashbuckle.aspnetcore) é um projeto de código aberto para gerar documentos Swagger para APIs da Web criadas com o ASP.NET Core.
 
-[Swagger](https://swagger.io) is a machine readable representation of a RESTful API that enables support for interactive documentation, client SDK generation and discoverability.
+[Swagger](https://swagger.io) é uma representação legível por máquina de uma API RESTful que permite suporte para documentação interativa, geração de SDK do cliente e descoberta.
 
-Additional information on using Swashbuckle in ASP.NET Core is available in this tutorial: [ASP.NET Web API Help Pages using Swagger](https://docs.microsoft.com/en-us/aspnet/core/tutorials/web-api-help-pages-using-swagger)
+Informações adicionais sobre o uso do Swashbuckle no ASP.NET Core estão disponíveis neste tutorial: [ASP.NET Web API Help Pages using Swagger](https://docs.microsoft.com/en-us/aspnet/core/tutorials/web-api-help-pages-using-swagger)
 
-1. Add a reference to the NuGet package `Swashbuckle.AspNetCore` version `5.0.0-rc4`.
-    > This can be done from the command line using `dotnet add package Swashbuckle.AspNetCore --version 5.0.0-rc4`
+1. Adicione uma referência para o pacote Nuget `Swashbuckle.AspNetCore` version `5.0.0-rc4`.
+    > Isso pode ser feito via linha de comando usando `dotnet add package Swashbuckle.AspNetCore --version 5.0.0-rc4`
 
-1. Add the Swashbuckle services in your `ConfigureServices` method:
+1. Adicione o serviço Swashbuckle no seus método `ConfigureServices`:
     ```csharp
     services.AddControllers();
 
@@ -182,7 +188,7 @@ Additional information on using Swashbuckle in ASP.NET Core is available in this
         options.SwaggerDoc("v1", new OpenApiInfo { Title = "Conference Planner API", Version = "v1" })
     );
     ```
-1. Configure Swashbuckle by adding the following lines just before `UseRouting` in the `Configure` method in `Startup.cs`:
+1. Configure o Swashbuckle adicionando as seguintes linhas logo antes de `UseRouting` no método `Configure` em `Startup.cs`:
     ```csharp
     app.UseSwagger();
 
@@ -190,8 +196,8 @@ Additional information on using Swashbuckle in ASP.NET Core is available in this
         options.SwaggerEndpoint("/swagger/v1/swagger.json", "Conference Planner API v1")
     );
     ```
-    > ***Note:* Due to how the middleware and pipeline are structured, you'll want to place this before the `app.UseEndpoints()` statement.**
-1. Add a redirect to the end of the pipeline that redirects to the swagger end point. 
+    > ***Nota:*  Devido à forma como o middleware e o pipeline estão estruturados, você deve colocá-lo antes da declaração  `app.UseEndpoints()`.**
+1. Adicione um redirecionamento ao final do pipeline que aponta para o endpoint do swagger.
    ```csharp
    app.Run(context =>
    {
@@ -200,12 +206,12 @@ Additional information on using Swashbuckle in ASP.NET Core is available in this
    });
    ```
 
-1. Run the application (F5 in Visual Studio or `dotnet run` from console).
-1. Browse to the Swagger UI at `http://localhost:<random_port>/swagger`.
+1. Execute a aplicação (F5 no Visual Studio ou `dotnet run` no console).
+1. Navegue para a UI do Swagger em `http://localhost:<random_port>/swagger`.
     ![](images/swagger-speakers.png)
-1. First, click on the *GET* button in *Values* section. You'll see the values that were listed in the `ValuesController` earlier.
-1. In the *Speakers* section, click on the *GET* button. You'll see there are not speakers returned. Let's add one!
-1. In the *Speakers* section, click on the *POST* button. Referencing the example on the right, fill in a speaker request. Leave the `ID` blank, that will be filled in by the database.
+1. Primeiro, clique no botão *GET* na sessão *Values*. Você vai os valores que foram listados no `ValuesController` anteriormente.
+1. Na sessão *Speakers*, clique no botão *GET*. Você vai ver que não há palestrantes sendo retornados. Vamos adicionar um!
+1. Na sessão *Speakers*, clique no botão *POST*. Referenciando o exemplo a direita, preencha uma requisição para o palestrante. Deixe o `ID` em branco, isso será definido pelo banco de dados.
     ![](images/swagger-create-speaker.png)
     ```json
     {
@@ -214,7 +220,7 @@ Additional information on using Swashbuckle in ASP.NET Core is available in this
       "webSite": "http://giphy.com/search/tyrion-lannister"
     }
     ```
-1. When you click the *Try it out!* button, you should see a success response from the server. Now, clicking the *GET* button above should show your newly added speaker.
+1. Quando você clicar no botão *Try it out!*, você deve ver uma resposta de sucesso do servidor. Agora, clicando no botão *GET* acima, deve exibir o palestrante recém cadastrado.
     ![](images/swagger-create-results.png)
 
-**Next**: [Session #2 - Back-end](2.%20Build%20out%20BackEnd%20and%20Refactor.md)
+**Próximo**: [Sessão #2 - Back-end](2.%20Build%20out%20BackEnd%20and%20Refactor.md)
