--- a/docs/2. Build out BackEnd and Refactor.md
+++ b/docs/2. Build out BackEnd and Refactor.md
@@ -1,53 +1,54 @@
 
 
-## Building out the Back End
+## Construindo o Back End
 
-In this session, we'll add the rest of our models and controllers that expose them. We'll also refactor our application, moving our DTOs to a shared project so they can be used by our front-end application later.
+Nesta sessão, nós iremos adicionar o resto dos nossos modelos e controllers que os expõem. Nós também iremos refatorar a nossa aplicação movendo os nossos DTOs para um projeto compartilhado para que eles possam ser usados pela nossa aplicação front-end mais tarde.
 
-## Add a ConferenceDTO project
-> We'll start by creating the new shared project to hold our data transfer objects.
-### Adding the ConferenceDTO Project using Visual Studio
-1. If using Visual Studio, right-click on the Solution and select *Add* / *New Project...*.
-1. Select *.NET Standard* from the project types on the left and select the *Class Library (.NET Standard)* template. Name the project ConferenceDTO and press OK.
+## Adicionando o projeto ConferenceDTO
+> Vamos começar criando o novo projeto compartilhado que irá conter os nossos objetos de transferência de dados (ou data transfer objects).
+
+### Adicionando o projeto ConferenceDTO usando o Visual Studio
+1. Se estiver usando o Visual Studio, clique com o botão direito na Solution e escolha *Add* / *New Project...*.
+1. Escolha *.NET Standard* como tipo de projeto na esquerda e escolha o template *Class Library (.NET Standard)*. Nomeie o projeto como ConferenceDTO and clique em OK.
 ![](images/vs2019-create-dto-project.png)
-1. Delete the generated `Class1.cs` file from this new project.
-1. Right-click the 'Dependencies' node under the BackENd project, select "Add Reference..." and put a checkmark near ConferenceDTO.
+1. Delete o arquivo `Class1.cs` deste novo projeto.
+1. Clique com o botão direito no nó 'Dependencies' do projeto BackEnd, escolha "Add Reference..." e certifique-se de marcar o ConferenceDTO.
 
-### Adding the ConferenceDTO project via the Command Line
-1. Open a command prompt and navigate to the root `ConferencePlanner` directory.
-1. Run the following command: 
+### Adicionando o projeto ConferenceDTO via linha de comando
+1. Abra o prompt de comando e navegue para o diretório raiz `ConferencePlanner`.
+1. Execute o seguinte commando: 
    ```console
    dotnet new classlib -o ConferenceDTO -f netstandard2.0
    ```
 1. Next we'll need to add a reference to the ConferenceDTO project from the BackEnd project. From the command line, navigate to the BackEnd project directory and execute the following command:
+1. A seguir, nós iremos precisar adicionar uma referência para o projeto ConferenceDTO no projeto BackEnd. Via linha de comando, navegue até o diretório do projeto BackEnd e execute o seguinte comando:
    ```console
    dotnet add reference ../ConferenceDTO
    ```
-1. Add the ConferenceDTO project to the solution:
+1. Adicione o projeto ConferenceDTO na Solution:
    ```
    dotnet sln add ConferenceDTO/ConferenceDTO.csproj
    ```
 
-## Refactoring the Speaker model into the ConferenceDTO project
-1. Copy the `Speaker.cs` class from the *BackEnd* application into the root of the new ConferenceDTO project, and change the namespace to `ConferenceDTO`.
-1. The data annotations references should be broken at this point, to resovle it, we need to add a nuget the missing NuGet package into the `ConferenceDTO` project.
-1. Add a reference to the NuGet package `System.ComponentModel.Annotations` version `4.6.0`.
-    > This can be done from the command line using `dotnet add package System.ComponentModel.Annotations --version 4.6.0`
-
-1. When the package restore completes, you should see that your data annotations are now resolved.
-1. Go back to the *BackEnd* application and modify the code in `Speaker.cs` as shown:
+## Refatorando o modelo Speaker no projeto ConferenceDTO
+1. Copie a classe `Speaker.cs` da aplicação *BackEnd* na raiz do novo projeto ConferenceDTO, e altere o namespace para `ConferenceDTO`.
+1. As referências de anotações de dados (data annotations) devem "quebrar" neste ponto, para resolver isso, precisamos adicionar um pacote Nuget no projeto `ConferenceDTO`.
+1. Adicione uma referência para o pacote NuGet `System.ComponentModel.Annotations` version `4.6.0`.
+    > Isso pode ser feito via linha de comando executando `dotnet add package System.ComponentModel.Annotations --version 4.6.0`
+1. Quando a restaurações dos pacotes completarem, você vai ver que as suas anotações de dados (data annotations) foram resolvidas agora.
+1. Volte na aplicação *BackEnd* e modifique o código em `Speaker.cs` como o exemplo a seguir:
    ```csharp
    public class Speaker : ConferenceDTO.Speaker
    {
    }
    ```
-1. Run the application and view the Speakers data using the Swagger UI to verify everything still works.
+1. Execute a aplicação e veja os dados dos Speakers usando a UI do Swagger para verificar que tudo ainda funciona.
 
-## Adding the remaining models to ConferenceDTO
+## Adicionando os modelos restantes no ConferenceDTO
 
-We've got several more models to add, and unfortunately it's a little mechanical. You can copy the following classes manually, or open the completed solution which is shown at the end.
+Temos muito mais modelos para adicioinar, e infelizmente isso é um pouco mecânico. Você pode copiar as seguintes classes manualmente, ou abrir a solução completa que é mostrada no final.
 
-1. Create an `Attendee.cs` class in the *ConferenceDTO* project with the following code:
+1. Crie uma classe `Attendee.cs` no projeto *ConferenceDTO* com o seguinte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -76,7 +77,7 @@ We've got several more models to add, and unfortunately it's a little mechanical
        }
    }
    ```
-1. Create a `Session.cs` class with the following code:
+1. Crie uma classe `Session.cs` com o seguinte código:
    ```csharp
    using System;
    using System.Collections;
@@ -100,14 +101,14 @@ We've got several more models to add, and unfortunately it's a little mechanical
    
            public virtual DateTimeOffset? EndTime { get; set; }
    
-           // Bonus points to those who can figure out why this is written this way
+           // Um prêmio para aqueles que souberem por que isto está escrito desta forma
            public TimeSpan Duration => EndTime?.Subtract(StartTime ?? EndTime ?? DateTimeOffset.MinValue) ?? TimeSpan.Zero;
    
            public int? TrackId { get; set; }
        }
    }
    ```
-1. Create a new `Track.cs` class with the following code:
+1. Crie uma classe `Track.cs` com o seguiunte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -126,13 +127,13 @@ We've got several more models to add, and unfortunately it's a little mechanical
    }
    ```
 
-## Creating Derived Models in the BackEnd project
-We're not going to create our EF models directly from the `ConferenceDTO` classes. Instead, we'll create some composite classes such as `SessionSpeaker`, since these will map more closely to what our application will be working with.
+## Criando Modelos Derivados no projeto BackEnd
+Nós não vamos criar os nossos modelos do EF diretamente a partir das classes em `ConferenceDTO`. Ao invés disso, nós vamos criar algumas classes compostas como o `SessionSpeaker`, pois elas serão mapeadas mais próximas daquilo com o que estará sendo trabalhado na aplicação.
 
-We're also going to take this opportunity to rename the `Models` directory in the *BackEnd* project to `Data` since it no longer just contains models.
-1. Right-click the `Models` directory and select `Rename`, changing the name to `Data`.
-    > Note: If you are using Visual Studio, you can use refactoring to rename the namespace.
-1. Add a `SessionSpeaker.cs` class to the `Data` directory with the following code:
+Também vamos aproveitar essa oportunidade para renomear o diretório `Models` no projeto *BackEnd* para `Data` porque ele não contém mais apenas modelos.
+1. Clique com o botão direitoo no diretótio `Models` e escolha `Rename`, altere o nome para `Data`.
+    > Nota: Se você estiver no Visual Studio, você pode usar refatoração para renomear o namespace.
+1. Adicione uma classe `SessionSpeaker.cs` no diretório `Data` com o seguinte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -153,7 +154,7 @@ We're also going to take this opportunity to rename the `Models` directory in th
        }
    }
    ```
-1. Add an `SessionAttendee.cs` class with the following code:
+1. Adicione uma classe `SessionAttendee.cs` com o seguinte código:
  
    ```csharp
    using System;
@@ -175,7 +176,7 @@ We're also going to take this opportunity to rename the `Models` directory in th
        }
    }
    ```
-1. Add an `Attendee.cs` class with the following code:
+1. Adicioine uma classe `Attendee.cs` com o seguinte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -188,7 +189,7 @@ We're also going to take this opportunity to rename the `Models` directory in th
        }
    }
    ```
-1. Add a `Session.cs` class with the following code:
+1. Adicione uma classe `Session.cs` com o seguinte código:
    ```csharp
    using System;
    using System.Collections;
@@ -206,7 +207,7 @@ We're also going to take this opportunity to rename the `Models` directory in th
        }
    }
    ```
-1. Add a `Track.cs` class with the following code:
+1. Adicione uma classe `Track.cs` com o seguinte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -220,7 +221,7 @@ We're also going to take this opportunity to rename the `Models` directory in th
        }
    }
    ```
-1. Modify the `Speaker.cs` class we wrote previously to make the following two changes: update to the namespace to match our directory rename, and add a referece to the `SessionSpeaker` composite class:
+1. Modifique a classe `Speaker.cs` que nós escrevemos anteriormente para fazendo as duas seguintes alterações: atualize o namespace para o mesmo nome do diretório que renomeamos, e adicione uma referência para a classe composta `SessionSpeaker`:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -234,10 +235,10 @@ We're also going to take this opportunity to rename the `Models` directory in th
    }
    ```
 
-## Update the ApplicationDbContext
-Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows about our new models.
+## Atualize o ApplicationDbContext
+Certo, agora precisamos atualizar o nosso `ApplicationDbContext` para que o Entity Framework reconheça os nossos novos modelos.
 
-1. Update `ApplicationDbContext.cs` to use the following code:
+1. Atualize o `ApplicationDbContext.cs` para usar o seguinte código:
    ```csharp
    using Microsoft.EntityFrameworkCore;
 
@@ -276,29 +277,29 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
        }
    }
    ```
-1. Fix errors due to the rename from `BackEnd.Models` to `BackEnd.Data`. You can either do this using a find / replace (replacing "BackEnd.Models" with "BackEnd.Data") or you can do a build and fix errors.
-1. Ensure that the application builds now.
+1. Resolva os erros após renomeado o `BackEnd.Models` para `BackEnd.Data`. Você também pode fazer isso usando um Procurar / Substituir (substituindo "BackEnd.Models" por "BackEnd.Data") ou você pode fazer um build e resolver os erros.
+1. Certifique-se de que a aplicação agora completa o build sem erros.
 
-## Add a new database migration
+## Adicione uma nova migração de banco de dados (database migration)
 
-### Visual Studio: Package Manager Console 
-1. Run the following commands in the Package Manager Console (specify the `BackEnd` project)
+### Visual Studio: Console do Gerenciador de Pacotes (Package Manager Console)
+1. Execute os seguintes comandos no Console do Gerenciador de Pacotes (especifique o projeto `BackEnd` na caixa de seleção)
    ```console
    Add-Migration Refactor
    Update-Database
    ```
 
-### Command line
-1. Run the following commands in the command prompt in the `BackEnd` project directory:
+### Via linha de comando
+1. Execute os seguintes comandos na prompt de comando no diretório do projeto `BackEnd`:
    ```console
    dotnet ef migrations add Refactor
    dotnet ef database update
    ```
-1. Now take a deep breath and run the application and navigate to `/swagger`. You should see the Swagger UI.
+1. Agora respire fundo, execute a aplicação e navegue para `/swagger`. Você deve ver a UI do Swagger.
 
-## Updating the Speakers API controller
+## Atualizando o API controller Speakers
 
-1. Modify the query for the `GetSpeakers()` method as shown below:
+1. Modifique a query para o método `GetSpeakers()` como mostrado abaixo:
    ```csharp
    var speakers = await _context.Speakers.AsNoTracking()
                            .Include(s => s.SessionSpeakers)
@@ -306,7 +307,7 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
                            .ToListAsync();
    return speakers;
    ```
-1. While the above will work, this is directly returning our model class. A better practice is to return an output model class. Create a `SpeakerResponse.cs` class in the `ConferenceDTO` project with the following code:
+1. Embora que isso acima funcione, isso está retornando nossa classe modelo. Uma boa prática é retornar um modelo de classe de saída. Crie uma classe `SpeakerResponse.cs` no projeto `ConferenceDTO` com o seguinte código:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -320,7 +321,7 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
        }
    }
    ```
-1. Now we'll add a utility method to map between these classes. In the *BackEnd* project, create an `Infrastructure` directory. Add a class named `EntityExtensions.cs` with the following mapping code:
+1. Agora nós vamos adicionar um método de utilidades para mapear essas classes entre si. No projeto de *BackEnd*, crie um diretório `Infrastructure`. Adicione uma classe de nome `EntityExtensions.cs` com o seguinte código de mapeameto:
    ```csharp
    using BackEnd.Data;
    using System;
@@ -351,7 +352,7 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
        }
    }
    ```
-1. Now we can update the `GetSpeakers()` method of the *SpeakersController* so that it returns our response model. Update the last few lines so that the method reads as follows:
+1. Agora podemos atualizar o método `GetSpeakers()` do *SpeakersController* para que ele retorne o nosso modelo de saída. Atualize as linhas de código de forma semelhante ao método como mostrado a seguir:
    ```csharp
    [HttpGet]
    public async Task<ActionResult<List<ConferenceDTO.SpeakerResponse>>> GetSpeakers()
@@ -364,7 +365,7 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
        return speakers;
    }
    ```
-1. Update the `GetSpeaker()` method to use our mapped response models as follows:
+1. Atualize o método `GetSpeaker()` para usar o nosso modelo de saída mapeado como a seguir:
    ```csharp
    [HttpGet("{id}")]
    public async Task<ActionResult<ConferenceDTO.SpeakerResponse>> GetSpeaker(int id)
@@ -380,26 +381,26 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
        return speaker.MapSpeakerResponse();
    }
    ```
-1. Remove the other actions (`PutSpeaker`, `PostSpeaker`, `DeleteSpeaker`), on the `SpeakersController`.
+1. Remova as outras actions (`PutSpeaker`, `PostSpeaker`, `DeleteSpeaker`), no `SpeakersController`.
 
-## Adding the remaining API Controllers and DTOs
+## Adicionando os API Controllers e DTOs restantes
 
-1. Add the following response DTO classes from [the save point folder](/save-points/2-BackEnd-completed/ConferencePlanner/ConferenceDTO)
+1. Adicione as seguintes classes DTO de saída contidas [na pasta save point](/save-points/2-BackEnd-completed/ConferencePlanner/ConferenceDTO)
    - `AttendeeResponse`
    - `SessionResponse`
    - `ConferenceResponse`
    - `TrackResponse`
    - `TagResponse`
-1. Update the `EntityExtensions` class with the `MapSessionResponse` and `MapAttendeeResponse` methods from [the save point folder](/save-points/2b-BackEnd-completed/ConferencePlanner/BackEnd/Infrastructure)
-1. Copy the following controllers from [the save point folder](/save-points/2b-BackEnd-completed/ConferencePlanner/BackEnd/Controllers) into the current project's `BackEnd/Controllers` directory:
+1. Atualize a classe `EntityExtensions` com os métodos `MapSessionResponse` e `MapAttendeeResponse` da [pasta save point](/save-points/2b-BackEnd-completed/ConferencePlanner/BackEnd/Infrastructure)
+1. Copie os seguintes controllers da [pasta save point](/save-points/2b-BackEnd-completed/ConferencePlanner/BackEnd/Controllers) no diretório do projeto atual `BackEnd/Controllers`:
    - `SessionsController`
    - `AttendeesController`
 
-## Adding Conference Upload support
+## Adicionando suporte a Conference Upload
 1. Copy the `DataLoader.cs` class from [here](/src/BackEnd/Data/DataLoader.cs) into the `Data` directory of the `BackEnd` project.
-1. Copy the `SessionizeLoader.cs` and `DevIntersectionLoader.cs` classes from [here](/src/BackEnd/Data/) into the current project's `/src/BackEnd/Data/` directory. 
-    > Note: We have data loaders from the two conference series where this workshop has been presented most; you can update this to plug in your own conference file format.
-1. To improve the UI for upload, turn on the option to display enums as strings by changing `AddSwaggerGen` in `Startup.cs` to the following:
+1. Copie as classes `SessionizeLoader.cs` e `DevIntersectionLoader.cs` [daqui](/src/BackEnd/Data/) para o diretório do projeto atual `/src/BackEnd/Data/`. 
+    > Nota: Temos carregadores de dados das duas séries de conferências onde este workshop foi mais apresentado; você pode atualizar isso para conectar seu próprio formato de arquivo de conferência.
+1. Para melhorar a interface do usuário para upload, ative a opção de exibir enumerações como strings, alterando `AddSwaggerGen` em `Startup.cs` para o seguinte:
     ```c#
     services.AddSwaggerGen(options =>
     {
@@ -407,7 +408,8 @@ Okay, now we need to update our `ApplicationDbContext` so Entity Framework knows
         options.DescribeAllEnumsAsStrings();
     });
     ```
-1. Run the application to see the updated data via Swagger UI.
-1. Use the Swagger UI to upload [NDC_Oslo_2019.json](/src/BackEnd/Data/Import/NDC_Oslo_2019.json) to the `/api/Sessions/upload` API.
+1. Execute o aplicativo para ver os dados atualizados pela UI do Swagger.
+1. Use the Swagger UI to upload [NDC_Sydney_2019.json](/src/BackEnd/Data/Import/NDC_Sydney_2019.json) to the `/api/Sessions/upload` API.
+1. Use a UI do Swagger para fazer o upload do [NDC_Sydney_2019.json](/src/BackEnd/Data/Import/NDC_Sydney_2019.json) para a API `/api/Sessions/upload`.
 
-**Next**: [Session #3 - Front-end](3.%20Add%20front-end%2C%20render%20agenda%2C%20set%20up%20front-end%20models.md) | **Previous**: [Session #1 - Setup, basic EF model](/docs/1.%20Create%20BackEnd%20API%20project.md)
+**Próximo**: [Sessão #3 - Front-end](3.%20Add%20front-end%2C%20render%20agenda%2C%20set%20up%20front-end%20models.md) | **Anterior**: [Sessão #1 - Setup, basic EF model](/docs/1.%20Create%20BackEnd%20API%20project.md)
