--- a/docs/3. Add front-end, render agenda, set up front-end models.md
+++ b/docs/3. Add front-end, render agenda, set up front-end models.md
@@ -1,38 +1,38 @@
-## Building the Front End
-In this session, we'll add the front end web site, with a public (anonymous) home page showing the conference agenda.
+## Construindo o Front End
+Nesta sessão, nós iremos adicionar o front end e o web site, com uma página inicial pública (anônima) exibindo a agenda da conferência.
 
-## Add a FrontEnd project
-> We'll start by creating the new front end project for the web site.
+## Adicione um projeto FrontEnd
+> Começaremos criando o novo projeto front end para o web site.
 
-### Adding the FrontEnd Project using Visual Studio
-1. If using Visual Studio, right-click on the Solution and select *Add* / *New Project...*.
-1. Select *.NET Core* from the project types on the left and select the *ASP.NET Core Web Application* template. Name the project "FrontEnd", name the solution "ConferencePlanner", and press OK.
-1. Select *ASP.NET Core 3.0* from the drop-down list in the top-left corner
-1. Select the *Web Application* template and click *OK*
+### Adicionando o projeto FrontEnd usando o Visual Studio
+1. Se estiver no Visual Studio, clique com o botão direito na Solução e escolha *Add* / *New Project...*.
+1. Escolha *.NET Core* como tipo de projeto na esquerda e escolha o template *ASP.NET Core Web Application*. Dê o nome "FrontEnd" ao projeto, dê o nome "ConferencePlanner" à solução, e aperte OK.
+1. Escolha *ASP.NET Core 3.0* na lista da caixa de seleção no canto superior esquerdo
+1. Escolha o template *Web Application* e clique em *OK*
 ![](images/vs2019-new-razorpages-project.png)
-1. Right-click on the *FrontEnd* project and add a reference to the *ConferenceDTO* project.
+1. Clique com o botão direito no projeto *FrontEnd* e adicione uma referência para o projeto *ConferenceDTO*.
 
-### Adding the FrontEnd Project via the Command Line
-1. Open a command prompt and navigate to the root `ConferencePlanner` directory.
-1. Run the following command:
+### Adicionando o projeto FrontEnd via linha de comando
+1. Abra o prompt de comando e navegue até o diretório raiz `ConferencePlanner`.
+1. Execute o seguinte comando:
    ```console
    dotnet new webapp -o FrontEnd
    ```
-1. Next we'll need to add a reference to the ConferenceDTO project from the new FrontEnd project. From the command line, navigate to the FrontEnd project directory and execute the following command:
+1. A seguir iremos adicionar uma referência para o projeto ConferenceDTO no novo projeto FrontEnd. Na linha de comando, navegue até o diretório do projeto e execute o seguinte comando:
    ```console
    dotnet add reference ../ConferenceDTO/ConferenceDTO.csproj
    ```
 
-## Delete unwanted content
-> We'll clear out some content from the template that we don't need
-1. Open */Pages/Index.cshtml* and delete all the HTML content (after line 6)
+## Apague coisas desnecessárias
+> Vamos limpar algumas coisas no template que nós não precisamos
+1. Abra */Pages/Index.cshtml* e apague todo o conteúdo HTML (após a linha 6)
 
-## Create and wire-up an API service client
-> We'll create a class to talk to our backend web API service
+## Criar e conectar um serviço de cliente de API
+> Vamos criar uma classe para falar com a nossa web API de serviço no backend
 
-### Create the API service client class
-1. Create a folder called *Services* in the root of the project
-1. In this folder, add a new interface called `IApiClient` with the following members:
+### Crie a classe cliente de serviço de API
+1. Crie uma pasta chamada *Services* na raiz do projeto
+1. Nessa pasta, adicione uma nova interface chamada `IApiClient` com os seguintes membros:
    ``` csharp
    using System;
    using System.Collections.Generic;
@@ -55,11 +55,11 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        }
    }
    ```
-1. Add a reference to the *Microsoft.AspNet.WebApi.Client* NuGet package in the FrontEnd project:
+1. Adicione uma referência para o pacote Nuget *Microsoft.AspNet.WebApi.Client* no projeto FrontEnd:
    ```
    dotnet add package Microsoft.AspNet.WebApi.Client
    ```
-1. Staying in this folder, add a new class called `ApiClient` that implements the `IApiClient` interface by using `HttpClient` to call out to our BackEnd API application and JSON serialize/deserialize the payloads:
+1. Ainda nessa pasta, adicione uma nova classe chamada `ApiClient` que implementa a interface `IApiClient` usando `HttpClient` para chamar a nossa aplicação API BackEnd e serializar/deserializar os payloads em JSON:
    ``` csharp
    using System;
    using System.Collections.Generic;
@@ -181,10 +181,10 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-### Configure the API client
+### Configure a API no cliente
 
-1. Open the *Startup.cs* file
-1. Locate the `ConfigureServices` method and add the following code to the bottom of it:
+1. Abra o arquivo *Startup.cs*
+1. Localize o método `ConfigureServices` e adicione o seguinte código na parte inferior dele:
 
    ``` csharp
    services.AddHttpClient<IApiClient, ApiClient>(client =>
@@ -193,21 +193,21 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    });
    ```
 
-1. This adds an instance of `HttpClientFactory` with its base URL pulled from the application configuration, which will point to our BackEnd API application
-1. Open the *appsettings.json* file and add the configuration key for `serviceUrl` pointing to the URL your specific BackEnd API application is configured to run in (check your *launchSettings.json* file for the specific port your BackEnd API application uses):
+1. Isso adiciona uma instância do `HttpClientFactory` com o seu URL base obtido a partir da configuração da aplicação, o qual apontará para a nossa aplicação BackEnd API
+1. Abra o arquivo *appsettings.json* e adicione a chave de configuração para `serviceUrl` apontando para a URL de acesso em que a sua aplicação API BackEnd específica está configurada (verifique o arquivo *launchSettings.json* para saber a porta específica que a sua aplicativo API BackEnd usa):
 
    ``` json
    "ServiceUrl": "https://localhost:56009/"
    ```
 
-## List the sessions on the home page
+## Liste as sessões na página inicial
 
->Now that we have an API client we can use to talk to our BackEnd API application, we'll update the home page to show a basic list of all sessions for the conference to ensure the FrontEnd can talk to the BackEnd correctly.
+>Agora que temos um cliente de API que podemos usar para conversar com nossa aplicação API BackEnd, atualizaremos a página inicial para mostrar uma lista básica de todas as sessões da conferência para garantir que o FrontEnd possa conversar corretamente com o BackEnd.
 
-### Load the data into the PageModel
+### Carregue os dados na PageModel
 
-1. Open the */Pages/Index.cshtml.cs* file
-1. Edit the constructor to accept the `IApiClient` interface and store it in a local field:
+1. Abra o arquivo */Pages/Index.cshtml.cs*
+1. Edite o construtor para receber a interface `IApiClient` e atribua ela a uma campo local:
 
    ``` csharp
    protected readonly IApiClient _apiClient;
@@ -218,7 +218,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-1. Add some properties to store sessions and other data we'll need when rendering the page:
+1. Adicione algumas propriedades para armazenar sessões e outros dados que precisaremos ao renderizar a página:
 
    ``` csharp
    public IEnumerable<IGrouping<DateTimeOffset?, SessionResponse>> Sessions { get; set; }
@@ -228,7 +228,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    public int CurrentDayOffset { get; set; }
    ```
 
-1. Add a page handler method to handle GET requests to the page, that loads the session data and calculates the data required to build the day navigation UI:
+1. Adicione um método de manipulação de página para manipular requisições do tipo GET na página, isso carrega os dados da sessão e calcula os dados necessários para montar a UI de navegação do dia:
 
    ``` csharp
    public async Task OnGet(int day = 0)
@@ -254,10 +254,10 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-### Render the sessions list on the home page
+### Renderizar a lista de sessões na página inicial
 
-1. Open the */Pages/Index.cshtml* Razor Page file
-1. Add some Razor markup to show the sessions as a simple list, grouped by time-slot:
+1. Abra a página Razor */Pages/Index.cshtml*
+1. Adicione algumas marcações Razor para exibir as sessões como uma lista simples, agrupada por time-slot:
 
    ``` html
    <div class="agenda">
@@ -275,12 +275,12 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        }
    </div>
    ```
-1. Right-click the solution, select Properties and set both BackEnd and FrontEnd as startup projects
-1. Run the FrontEnd application at this stage and we should see the sessions listed on the home page
+1. Clique com o botão direito na solução, escolha Propriedades e defina ambos os projetos BackEnd e FrontEnd como projetos de inicialização (startup projects)
+1. Executando a aplicação FrontEnd nesse ponto, podemos ver que as sessões são listadas na página inicial
 
-### Add buttons to allow showing sessions for different days
+### Adicione botões que permitem exebir as sessões em dias diferentes
 
-1. In */Pages/Index.cshtml*, add some markup to allow the user to show sessions for the different days of the conference, below the `<h1>` we added previously:
+1. Na */Pages/Index.cshtml*, adicione algumas marcações para permitir que o usuário exiba sessões para dias diferentes da conferência, abaixo do `<h1>` que adicionamos anteriormente:
 
    ``` html
    <ul class="nav nav-pills mb-3">
@@ -293,11 +293,11 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    </ul>
    ```
 
-1. Run the application again and try clicking the buttons to show sessions for the different days
+1. Execute a aplicação novamente e tente clicar nos botões para exibir sessões para dias diferentes
 
-## Update the sessions list UI
+## Atualize a UI de lista de sessões
 
-1. Make the list of sessions better looking by updating the markup to use [Bootstrap cards](https://getbootstrap.com/docs/4.0/components/card/):
+1. Melhore a aparência da lista de sessões atualizando a marcação para usar os [cards do Bootstrap](https://getbootstrap.com/docs/4.0/components/card/):
 
    ``` html
    <h4>@timeSlot.Key?.ToString("HH:mm")</h4>
@@ -326,15 +326,15 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    </div>
    ```
 
-1. Run the page again and see the updated sessions list UI. Click the buttons again to show sessions for the different days.
+1. Execute a página novamente e veja a UI da lista de sessões atualizada. Clique nos botões novamente para exibir sessões para dias diferentes.
 
-## Add a session details page
-> Now that we have a home page showing all the sessions, we'll create a page to show all the details of a specific session
+## Adicione uma página de detalhes das sessões
+> Agora que temos uma página inicial exibindo todas as sessões, vamos criar uma página para exibir todos os detalhes de uma sessão específica
 
-### Add a Session Razor Page
-1. Add a new Razor Page using the *Razor Page* template. Call the page *Session.cshtml* and save it in the */Pages* directory.
-1. Open *Session.cshtml.cs* and change the page model class to `SessionModel`.
-1. Accept the `IApiClient` in the constructor and add supporting members to the Page model `SessionModel`:
+### Adicione uma página Razor Sessões
+1. Adicione uma nova Página Razor usando o template *Razor Page*. Vamos chamar essa nova página de *Session.cshtml* e salva-la no diretório */Pages*.
+1. Abra o *Session.cshtml.cs* e altere a classe de modelo de página para `SessionModel`.
+1. Aceite o `IApiClient` no construtor e adicione membros de suporte para o modelo de Página `SessionModel`:
    ``` csharp
    public class SessionModel : PageModel
    {
@@ -350,7 +350,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        public int? DayOffset { get; set; }
    }
    ```
-1. Add a page handler method to retrieve the Session details and set them on the model:
+1. Adicione um método manipulador de página para recuperar os detalhes da Session e defini-los no modelo:
    ``` csharp
    public async Task<IActionResult> OnGetAsync(int id)
    {
@@ -370,7 +370,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
         return Page();
     }
    ```
-1. Open the *Session.cshtml* file and add markup to display the details and navigation UI:
+1. Abra o arquivo *Session.cshtml* e adicione marcação para exibir os detalhes e UI de navegação:
    ``` html
    @page "{id}"
    @model SessionModel
@@ -395,11 +395,11 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
     }
    ```
 
-## Add a page to show speaker details
->We'll add a page to show details for a given speaker
+## Adicione uma página para exibir os detalhes do speaker
+>Vamos adicionar uma página para exibir os detalhes para um determinado speaker
 
-1. Add a new Razor Page using the *Razor Page* template. Call the page *Speaker.cshtml* and save it in the */Pages* directory.
-1. Accept the `IApiClient` in the constructor and add supporting members to the Page model `SpeakerModel`:
+1. Adicione um nova Página Razor usando o template *Razor Page*. Chame a págna de *Speaker.cshtml* e salve-a no diretório */Pages*.
+1. Aceite o `IApiClient` no contrutor e adicione membros de suporte para o modelo de Página `SpeakerModel`:
    ``` csharp
    public class SpeakerModel : PageModel
    {
@@ -413,7 +413,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        public SpeakerResponse Speaker { get; set; }
    }
    ```
-1. Add a page handler method to retrieve the Speaker details and set them on the model:
+1. Adicione um método de manipulação de página para recuperar os detalhes do Speaker e defini-los no modelo:
    ``` csharp
    public async Task<IActionResult> OnGet(int id)
    {
@@ -427,7 +427,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        return Page();
    }
    ```
-1. Open the *Speaker.cshtml* file and add markup to display the details and navigation UI:
+1. Abra o arquivo *Speaker.cshtml* e adicione marcação para exibir os detalhes e UI de navegação:
    ``` html
    @page "{id}"
    @model SpeakerModel
@@ -454,11 +454,10 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    </div>
    ```
 
-## Add search functionality
->We'll add a page to allow users to search the conference agenda, finding sessions and speakers that match the supplied search term.
-
-### Add DTOs for search
-1. Add a new DTO class `SearchTerm` in the DTO project:
+## Adicione funcionalidade de buscas
+>Vamos adicionar uma página que permita que o usuário realize buscas na agenda da conferência, encontrando sessões e palestrantes que correspondam aos termos da pesquisa.
+### Adicione os DTOs para as buscas
+1. Adicione uma nova classe DTO `SearchTerm` no projeto de DTO:
     ```csharp
     using System;
     using System.Collections.Generic;
@@ -472,7 +471,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
         }
     }
     ```
-1. Add a new DTO class `SearchResult` in the DTO project:
+1. Adicione uma nova classe DTO `SearchResult` no projeto de DTO:
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -497,8 +496,8 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-### Add a search controller
-1. Add a `SearchController` with an action method that accepts a `SearchTerm` and searchs for sessions and speakers with matching titles or names, and concatenates the results as `SearchResult`s:
+### Adicione um controller de busca
+1. Adicione um `SearchController` com um método de ação (action method) que aceita um termo de pesquisa `SearchTerm` e busca por sessões e palestrantes com títulos ou nomes correspondentes.
    ```csharp
    using System;
    using System.Collections.Generic;
@@ -561,12 +560,12 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-### Add search methods to the IApiClient
-1. Add the `SearchAsync` method to IApiClient:
+### Adicione métodos de busca na IApiClient
+1. Adicione o método `SearchAsync` para o IApiClient:
    ```csharp
    Task<List<SearchResult>> SearchAsync(string query);
    ```
-1. Add the implementation to ApiClient:
+1. Adicione a implementação para o ApiClient:
    ```csharp
    public async Task<List<SearchResult>> SearchAsync(string query)
    {
@@ -583,9 +582,9 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
    }
    ```
 
-### Add a search page to the Front End
-1. Add a new Razor Page using the *Razor Page* template. Call the page *Search.cshtml* and save it in the */Pages* directory.
-1. Accept the `IApiClient` in the constructor and add supporting members to the Page model `SearchModel`:
+### Adicioine um página de buscas no Front End
+1. Adicione uma nova Página Razor usando o template *Razor Page*. Chame a página de *Search.cshtml* e salve-a no diretório */Pages*.
+1. Aceite o `IApiClient` no construtor e adicione membros de suporte para a Página modelo `SearchModel`:
    ``` csharp
    public class SearchModel : PageModel
    {
@@ -601,7 +600,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        public List<SearchResult> SearchResults { get; set; }
    }
    ```
-1. Add a page handler method to retrieve the search results and set them on the model, deserializing the individual search items to the relevant model type:
+1. Adicione um método manipulador página para recuperar os resultados de busca e atribuí-los ao modelo, deserializando os itens de busca individuais para o tipo de modelo correspondente:
    ``` csharp
    public async Task OnGetAsync(string term)
    {
@@ -609,7 +608,7 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        SearchResults = await _apiClient.SearchAsync(term);
    }
    ```
-1. Open the *Search.cshtml* file and add markup to allow users to enter a search term and display the results, casting each result to the relevant display model type:
+1. Abra o arquivo *Search.cshtml* e adicione marcação para permitir que os usuários digitem um termo de busca e exibam os resultados, transformando cada resultado no tipo de modelo correspondente:
    ``` html
    @page
    @using ConferenceDTO
@@ -679,12 +678,12 @@ In this session, we'll add the front end web site, with a public (anonymous) hom
        }
    </div>
    ```
-1. Add the search link to the navigation pane in `_Layout.cshtml`:
+1. Adicione o link de busca no painel de navegação no `_Layout.cshtml`:
     ```html
     <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/Search">Search</a>
     </li>
     ```
-1. Click on the `Search` link to test the new search feature.
+1. Clique no link `Search` para testar a novo recurso de busca.
 
-**Next**: [Session #4 - Authentication](4.%20Add%20auth%20features.md) | **Previous**: [Session #2 - Back-end](2.%20Build%20out%20BackEnd%20and%20Refactor.md)
+**Próximo**: [Sessão #4 - Autenticação](4.%20Add%20auth%20features.md) | **Anterior**: [Sessão #2 - Back-end](2.%20Build%20out%20BackEnd%20and%20Refactor.md)
